changed docker-compose file to use image from dockerhub for timetracker app container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    build: .
+    image: lastletter/timetracker-app:latest
     platform: linux/amd64
     depends_on:
       postgres:
