Added format in project_detail table, add volume for postgres in docker-compose, created separated docker file with local image build

--- a/docker-compose_dev.yml
+++ b/docker-compose_dev.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: lastletter/timetracker-app:latest
+    build: .
     platform: linux/amd64
     depends_on:
       postgres:
